Add collection stats
